--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,6 +62,26 @@ body {
     }
 }
 
+footer {
+    padding: 6rem 0 2rem 0;
+    text-align: center;
+
+    p {
+        margin-bottom: 1rem;
+    }
+
+    img {
+        max-height: 32px;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 0 0.3rem;
+    }
+
+    i, svg {
+        animation: heart 4s infinite;
+    }
+}
+
 .btn {
     @apply text-2xl px-6 py-3 rounded-full shadow-lg;
 
@@ -99,5 +119,21 @@ body {
 
     &:hover {
         transform: translateY(-5px);
+    }
+}
+
+@keyframes heart
+{
+    0%
+    {
+        transform: scale( 1 );
+    }
+    50%
+    {
+        transform: scale( 1.2 );
+    }
+    100%
+    {
+        transform: scale( 1 );
     }
 }
